Added about, teaching, research pages and photos

--- a/research.html
+++ b/research.html
@@ -201,7 +201,25 @@ $(document).ready(function () {
 </div>
 
 
-<p>Under construction….</p>
+<p><img src="C:/Users/Carrie/Documents/GitHub/carriec.github.io/demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="C:/Users/Carrie/Documents/GitHub/carriec.github.io/rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="C:/Users/Carrie/Documents/GitHub/carriec.github.io/IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"></p>
+<div id="graduate-research-assistant-isu-extension-outreach" class="section level4">
+<h4>Graduate Research Assistant, ISU Extension &amp; Outreach</h4>
+<p><em>SNAP-Education &amp; Master Gardener Programs</em></p>
+<p>My dissertation research is part of an interdisciplinary effort within ISU Extension &amp; Outreach (ISUEO) to coordinate statewide community donation gardens in Iowa, entitled <em>Growing Together</em>. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interact with, work alongside, and learn from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I work to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.</p>
+</div>
+<div id="graduate-research-assistant-isu-extension-outreach-1" class="section level4">
+<h4>Graduate Research Assistant, ISU Extension &amp; Outreach</h4>
+<p><em>Local Foods Team</em></p>
+<p>The Local Foods Team supports my dissertation research on community food security in Iowa, and has grounded my focus on community-based food systems projects and how to develop more equitable, socially just community food practices. I coordinate my research activities in the <em>Growing Together</em> project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.</p>
+</div>
+<div id="graduate-research-assistant-natural-resource-ecology-management" class="section level4">
+<h4>Graduate Research Assistant, Natural Resource Ecology &amp; Management</h4>
+<p><em>Landscape Ecology &amp; Sustainable Ecosystem Management Lab</em></p>
+<p>My master’s research focused on agroecological modeling in the U.S. Corn Belt. PEWI, or People in Ecosystems/Watershed Integration, is a simple web-based learning tool to help people understand human-landscape interactions and tradeoffs. PEWI helps people explore ways to balance agricultural production in the U.S. Corn Belt with other environmental benefits, including clean water, abundant wildlife, and recreation, among others. In my role on this project, I was the lead developer of the science model for PEWI 2.0, and also developed educational materials, created a library of PEWI-based lesson plans, conducted workshops and course units on PEWI, oversaw web development, and served as project manager.</p>
+</div>
 
 
 
