--- a/teaching.html
+++ b/teaching.html
@@ -201,7 +201,33 @@ $(document).ready(function () {
 </div>
 
 
-<p>Under construction….</p>
+<div id="instructor-at-iowa-state-university" class="section level4">
+<h4>Instructor at Iowa State University</h4>
+<p><strong>FOR/NREM 452/552: Ecosystem Management</strong><br />
+Department of Natural Resource Ecology and Management, Spring 2015 Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.</p>
+</div>
+<div id="guest-lecturer-at-iowa-state-university" class="section level4">
+<h4>Guest lecturer at Iowa State University</h4>
+<p><strong>CRP 383: Theory of the Planning Process</strong><br />
+Department of Community and Regional Planning, Fall 2016</p>
+<p><strong>HORT 376: Field Production of Horticultural Crops</strong><br />
+Department of Horticulture, Fall 2016</p>
+<p><strong>FOR 451: Forest Resource Economics</strong><br />
+Department of Natural Resource Ecology and Management, Spring 2014</p>
+<p><strong>NREM 570: Advanced Decision-Making in Natural Resource Allocation</strong><br />
+Department of Natural Resource Ecology and Management, Spring 2014</p>
+</div>
+<div id="educational-outreach-and-engagement" class="section level4">
+<h4>Educational outreach and engagement</h4>
+<p><strong>Donation Gardening Trainings</strong><br />
+ISU Extension Master Gardener Program, Summer 2016</p>
+<p><strong>Food Security in Iowa Immersion Session Leader</strong><br />
+World Food Prize Iowa Youth Institute, Spring 2016</p>
+<p><strong>People in Ecosystems/Watershed Integration Public Workshops</strong><br />
+Co-hosted by Prairie Rivers of Iowa at Des Moines Area Community College, Fall 2015</p>
+<p><strong>People in Ecosystems/Watershed Integration Class</strong><br />
+Des Moines Brody Middle School 7th Grade Science, Spring 2015</p>
+</div>
 
 
 
