weird image behavior

--- a/research.html
+++ b/research.html
@@ -201,9 +201,9 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="C:/Users/Carrie/Documents/GitHub/carriec.github.io/demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="C:/Users/Carrie/Documents/GitHub/carriec.github.io/rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="C:/Users/Carrie/Documents/GitHub/carriec.github.io/IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
+<p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
 height="49%" width="49%"></p>
 <div id="graduate-research-assistant-isu-extension-outreach" class="section level4">
 <h4>Graduate Research Assistant, ISU Extension &amp; Outreach</h4>
