--- a/research.html
+++ b/research.html
@@ -202,8 +202,8 @@ $(document).ready(function () {
 
 
 <p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="rockrapids-harvest.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.PNG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
+height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
 height="49%" width="49%"></p>
 <div id="graduate-research-assistant-isu-extension-outreach" class="section level4">
 <h4>Graduate Research Assistant, ISU Extension &amp; Outreach</h4>
