--- a/teaching.html
+++ b/teaching.html
@@ -208,6 +208,8 @@ Department of Natural Resource Ecology and Management, Spring 2015 Principles of
 </div>
 <div id="guest-lecturer-at-iowa-state-university" class="section level4">
 <h4>Guest lecturer at Iowa State University</h4>
+<p><strong>WS 402/502: Advanced Seminar in Feminist Research Methods</strong><br />
+Women’s and Gender Studies Program, Spring 2017</p>
 <p><strong>CRP 383: Theory of the Planning Process</strong><br />
 Department of Community and Regional Planning, Fall 2016</p>
 <p><strong>HORT 376: Field Production of Horticultural Crops</strong><br />
@@ -219,6 +221,8 @@ Department of Natural Resource Ecology and Management, Spring 2014</p>
 </div>
 <div id="educational-outreach-and-engagement" class="section level4">
 <h4>Educational outreach and engagement</h4>
+<p><strong>Dare to Share Your Garden</strong><br />
+ISU Extension &amp; Outreach Cass County Spring Garden Seminar, Spring 2017</p>
 <p><strong>Donation Gardening Trainings</strong><br />
 ISU Extension Master Gardener Program, Summer 2016</p>
 <p><strong>Food Security in Iowa Immersion Session Leader</strong><br />
