--- a/teaching.html
+++ b/teaching.html
@@ -221,6 +221,8 @@ Department of Natural Resource Ecology and Management, Spring 2014</p>
 </div>
 <div id="educational-outreach-and-engagement" class="section level4">
 <h4>Educational outreach and engagement</h4>
+<p><strong>Re-imagining Food Access in Iowa's Community Food Systems</strong><br />
+ISU Extension &amp; Outreach Master Gardener Webinar, Winter 2018</p>
 <p><strong>Dare to Share Your Garden</strong><br />
 ISU Extension &amp; Outreach Cass County Spring Garden Seminar, Spring 2017</p>
 <p><strong>Donation Gardening Trainings</strong><br />
