--- a/research.html
+++ b/research.html
@@ -200,25 +200,55 @@ $(document).ready(function () {
 
 </div>
 
+<p><strong>"There <em>will be</em> no nature without justice. Nature and justice, contested discursive objects embodied in the material world, will become extinct or survive together."</strong></p> 
+<p>– Donna Haraway (1992, 311), "The Promises of Monsters: A Regenerative Politics for Inappropriate/d Others."</p>
+<p>As a feminist political ecologist, I build my research around the following question:  What are the politics of developing a 'just' food and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in rural and urban areas of the U.S. Corn Belt.  My recent work examines the racial, class, and gender dynamics at the nexus of local food and farming, emergency food, and Extension/land-grant practices. As a scholar-activist, I collaborate directly with communities working to transform their practices, while developing critical scholarship on issues such as power, voice, and relationality.  Through community collaborations, I explore opportunities for ‘co-experimentation’ (following Gibson-Graham and Carolan).  First, I seek to co-experiment with alternatives modes of growing, sharing, and eating food.  Secondly, I seek to co-experiment with critical, reflective conversations that may open up paths to more ‘just’ social and environmental relations.</p>
+<p>While at Iowa State University, my work has highlighted three aspects of developing a ‘just’ food and agricultural system, each with an emphasis on the role of feminist praxis: (1) understanding how food insecurity is characterized by uneven naturalcultural relations, and how those relations are shifting through the collective efforts of one community food systems project, Growing Together Iowa; (2) the challenges and opportunities of engaging in collective action with partners and institutions whose goals are not necessarily allied with principles of ‘justice’; and (3) the role of everyday practices in challenging the technocratic approaches of traditional land-grant university/Extension programming, and in transforming community food systems to become more ‘just’.</p>
 
+<div>
 <p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
-height="49%" width="49%"></p>
+height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
+height="46%" width="46%"></p>
+<strong>Focus areas</strong>
+<ul style="list-style-type:disc">
+  <li>Community and alternative agrifood systems</li>
+  <li>Grassroots agricultural and environmental movements</li>
+  <li>Land-grant universities and cooperative extension</li>
+  </ul>
+</div> 
+
+<div>
+<strong>Collaborations and Partnerships</strong>
+<ul style="list-style-type:disc">
+  <li>Growing Together Iowa</li>
+  <li>Iowa Sustainable Agriculture / Friends of the Leopold Center for Sustainable Agriculture</li>
+  <li>Food at First Community Garden</li>
+  </ul>
+</div> 
+
+<div id="research-projects" class="section level4">
+<h3>Current Research Assistantships</h3> 
+</div> 
+  
 <div id="graduate-research-assistant-isu-extension-outreach" class="section level4">
-<h4>Graduate Research Assistant, ISU Extension &amp; Outreach</h4>
-<p><em>SNAP-Education &amp; Master Gardener Programs</em></p>
-<p>My dissertation research is part of an interdisciplinary effort within ISU Extension &amp; Outreach (ISUEO) to coordinate statewide community donation gardens in Iowa, entitled <em>Growing Together</em>. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interact with, work alongside, and learn from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I work to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.</p>
+<h5>ISU Extension &amp; Outreach</h5>
+<p><em>SNAP-Education Program &amp; Local Foods Program</em></p>
+<p>My dissertation research is part of an interdisciplinary effort within ISU Extension &amp; Outreach (ISUEO) to coordinate statewide community donation gardens, entitled Growing Together Iowa. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interact with, work alongside, and learn from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I work to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.</p>
 </div>
 <div id="graduate-research-assistant-isu-extension-outreach-1" class="section level4">
-<h4>Graduate Research Assistant, ISU Extension &amp; Outreach</h4>
-<p><em>Local Foods Team</em></p>
-<p>The Local Foods Team supports my dissertation research on community food security in Iowa, and has grounded my focus on community-based food systems projects and how to develop more equitable, socially just community food practices. I coordinate my research activities in the <em>Growing Together</em> project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.</p>
+<p>The Local Foods program supports my dissertation research on community food systems in Iowa. I coordinate my research activities in the <em>Growing Together</em> project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.</p>
 </div>
+
+<div id="past-research" class="section level4">
+<h3>Past Research Asssitantships</h3> 
+</div>
+
+<p><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
+height="46%" width="46%"></p>
 <div id="graduate-research-assistant-natural-resource-ecology-management" class="section level4">
-<h4>Graduate Research Assistant, Natural Resource Ecology &amp; Management</h4>
-<p><em>Landscape Ecology &amp; Sustainable Ecosystem Management Lab</em></p>
-<p>My master’s research focused on agroecological modeling in the U.S. Corn Belt. PEWI, or People in Ecosystems/Watershed Integration, is a simple web-based learning tool to help people understand human-landscape interactions and tradeoffs. PEWI helps people explore ways to balance agricultural production in the U.S. Corn Belt with other environmental benefits, including clean water, abundant wildlife, and recreation, among others. In my role on this project, I was the lead developer of the science model for PEWI 2.0, and also developed educational materials, created a library of PEWI-based lesson plans, conducted workshops and course units on PEWI, oversaw web development, and served as project manager.</p>
+<h5>Department of Natural Resource Ecology &amp; Management</h5>
+<p><em>Landscape Ecology and Sustainable Ecosystem Management Lab &amp; Integrated Sustainable bioEnergy Pathways Team</em></p>
+<p>My master’s research focused on agroecological modeling in the U.S. Corn Belt. PEWI, or People in Ecosystems/Watershed Integration, is a simple web-based learning tool to help people understand human-landscape interactions and tradeoffs. PEWI helps people explore ways to balance agricultural production in the U.S. Corn Belt with other environmental benefits, including clean water, abundant wildlife, and recreation, among others. In my role on this project, I was the lead developer of the science model for PEWI 2.0, and also developed educational materials, created a library of PEWI-based lesson plans, conducted workshops and course units on PEWI, oversaw web development, and served as project manager.  In this role, I also worked with the ISEP, Integrated Sustainable bioEnergy Pathways, team to incorporate agroecological modeling into its agent-based modeling of bioenergy supply chains.</p>
 </div>
 
 
