Changes Friends of LCSA to LCSA Friends

--- a/research.html
+++ b/research.html
@@ -221,7 +221,7 @@ height="46%" width="46%"></p>
 <strong>Collaborations and Partnerships</strong>
 <ul style="list-style-type:disc">
   <li>Growing Together Iowa</li>
-  <li>Iowa Sustainable Agriculture / Friends of the Leopold Center for Sustainable Agriculture</li>
+  <li>Iowa Sustainable Agriculture / Leopold Center for Sustainable Agriculture Friends</li>
   <li>Food at First Community Garden</li>
   </ul>
 </div> 
