--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@ $(document).ready(function () {
 
 
 <p><img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-width="200" height="200">I am a PhD candidate in Sustainable Agriculture and minoring in Women’s and Gender Studies at Iowa State University, working with Kathleen Hunt and Ann Oberhauser. My research assistantships are with ISU Extension &amp; Outreach Local Foods program and ISU Extension &amp; Outreach SNAP-Education program, in collaboration with the Master Gardener program.</p>
-<p>Prior to entering my PhD program, I completed my M.S. in Sustainable Agriculture at Iowa State University in 2014, and my B.A. in The Plan II Honors Program and B.B.A. in Accounting at the University of Texas at Austin in 2008.</p>
-<p>I’m interested in food, social, and environmental justice, with a focus on feminist community-based, participatory research. My dissertation project focuses on a university-community food systems partnership, Growing Together Iowa.  While in graduate school, I’ve also been involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture. Currently I live with my spouse Andee in Durham, North Carolina, and enjoy swimming, cycling, hiking, rock climbing, and generally being outdoors whenever I can.</p>
-<p><a href="CV_CarrieChennault_June2018.pdf">CV</a> | <a href="mailto:carriemcpotato@iastatesquash.edu">carriemcpotato@iastatesquash.edu</a> (remove the vegetables from the address)</p>
+width="200" height="200">I am a PhD candidate in Sustainable Agriculture and minoring in Women’s and Gender Studies at Iowa State University, working with Dr. Ann Oberhauser. My research assistantships are with ISU Extension &amp; Outreach Local Foods and SNAP-Education programs.</p>
+<p>Prior to entering my PhD program, I completed an MS in Sustainable Agriculture at Iowa State University in 2014, and a B.A. in The Plan II Honors Program and B.B.A. in Accounting at the University of Texas at Austin in 2008.</p>
+<p>I’m interested in food, social, and environmental justice, with a focus on feminist community-based, participatory research. My dissertation project focuses on a university-community food systems partnership, Growing Together Iowa.  While in graduate school, I’ve also been involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture. Currently I live with my spouse Andee in Durham, North Carolina, and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.</p>
+<p><a href="CV_CarrieChennault_July2018.pdf">CV</a> | <a href="mailto:carriemcpotato@iastatesquash.edu">carriemcpotato@iastatesquash.edu</a> (remove the vegetables from the address)</p>
 
 
 
