--- a/teaching.html
+++ b/teaching.html
@@ -203,10 +203,12 @@ $(document).ready(function () {
 
 <div id="instructor-at-iowa-state-university" class="section level4">
 <h4>Instructor at Iowa State University</h4>
-<p><strong>FOR/NREM 452/552: Ecosystem Management</strong><br />
+<p><strong>FOR/NREM 452 (Combined class with FOR/NREM 551): Ecosystem Management</strong><br />
 Department of Natural Resource Ecology and Management, Spring 2015<br />Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.</p>
 </div>
 <div id="guest-lecturer-at-iowa-state-university" class="section level4">
+<h4>Guest lecturer at Iowa State University</h4>
+<p><strong>SOC 513: Qualitative Research Methods</strong><br />
 <h4>Guest lecturer at Iowa State University</h4>
 <p><strong>WS 402/502: Advanced Seminar in Feminist Research Methods</strong><br />
 Women’s and Gender Studies Program, Spring 2017</p>
