Updates to courses

--- a/teaching.html
+++ b/teaching.html
@@ -209,7 +209,7 @@ Department of Natural Resource Ecology and Management, Spring 2015<br />Principl
 <div id="guest-lecturer-at-iowa-state-university" class="section level4">
 <h4>Guest lecturer at Iowa State University</h4>
 <p><strong>SOC 513: Qualitative Research Methods</strong><br />
-<h4>Guest lecturer at Iowa State University</h4>
+Department of Sociology, Fall 2017</p>
 <p><strong>WS 402/502: Advanced Seminar in Feminist Research Methods</strong><br />
 Women’s and Gender Studies Program, Spring 2017</p>
 <p><strong>CRP 383: Theory of the Planning Process</strong><br />
