--- a/research.html
+++ b/research.html
@@ -202,7 +202,17 @@ $(document).ready(function () {
 
 <p><strong>"There <em>will be</em> no nature without justice. Nature and justice, contested discursive objects embodied in the material world, will become extinct or survive together."</strong></p> 
 <p>– Donna Haraway (1992, 311), "The Promises of Monsters: A Regenerative Politics for Inappropriate/d Others."</p>
-<p>As a feminist political ecologist, I build my research around the following question:  What are the politics of developing a 'just' food and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in rural and urban areas of the U.S. Corn Belt. My recent work examines the racial, class, and gender dynamics at the nexus of local food and farming, emergency food, and Extension/land-grant practices. As a scholar-activist, I collaborate directly with communities that are working to transform their community food practices. Through these engagements, I develop critical scholarship on issues such as power, voice, and relationality.  I additionally explore opportunities for university-community partnerships to engage in processes of ‘co-experimentation’ (following Gibson-Graham and Carolan).  Co-experimentation in my research includes alternatives modes of growing, sharing, and eating food.  It also includes critical, reflective conversations with academic and community partners that may open up paths to more ‘just’ naturalcultural relations. In these collaborations, I have explored how everyday experience, radical vulnerability, emotion/affect, the body, and more-than-human relationalities constitute co-experimental modes of social transformation.</p>
+<p>As a feminist political ecologist, I build my research around the following question: What are the politics of developing a 'just' food 
+and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in rural and 
+urban areas of the U.S. Corn Belt. My recent work examines the racial, class, and gender dynamics at the nexus of local food and farming, 
+emergency food, and Extension/land-grant practices. As a scholar-activist, I collaborate directly with communities that are working to 
+transform community food practices. Through these engagements, I develop critical scholarship on issues such as power, voice, and 
+relationality. I additionally explore opportunities for university-community partnerships to engage in processes of ‘co-experimentation’ 
+(following Gibson-Graham and Carolan). Co-experimentation in my research includes alternatives modes of growing, 
+sharing, and eating food.
+It also includes critical, reflective conversations and co-authorships with academic and community partners that may open up paths to more ‘just’ naturalcultural 
+relations. In these collaborations, I have explored how everyday experience, radical vulnerability, emotion/affect, the body, and more-than-human 
+relationalities constitute co-experimental modes of social transformation.</p>
 
 <div>
 <p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
