Research page - word change (food to agrifood)

--- a/research.html
+++ b/research.html
@@ -206,7 +206,7 @@ $(document).ready(function () {
 and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in rural and 
 urban areas of the U.S. Corn Belt. My recent work examines the racial, class, and gender dynamics at the nexus of local food and farming, 
 emergency food, and Extension/land-grant practices. As a scholar-activist, I collaborate directly with communities that are working to 
-transform community food practices. Through these engagements, I develop critical scholarship on issues such as power, voice, and 
+transform agrifood practices. Through these engagements, I develop critical scholarship on issues such as power, voice, and 
 relationality. I additionally explore opportunities for university-community partnerships to engage in processes of ‘co-experimentation’ 
 (following Gibson-Graham and Carolan). Co-experimentation in my research includes alternatives modes of growing, 
 sharing, and eating food.
