--- a/teaching.html
+++ b/teaching.html
@@ -203,7 +203,7 @@ $(document).ready(function () {
 
 <div id="instructor-at-iowa-state-university" class="section level4">
 <h4>Instructor at Iowa State University</h4>
-p><strong>WGS 201 Introduction to Women's and Gender Studies</strong><br />
+<p><strong>WGS 201 Introduction to Women's and Gender Studies</strong><br />
 Women's and Gender Studies Program, Spring 2019 (2 sections)<br />Contemporary status of women in the U.S. and worldwide from social, economic, historical, political, philosophical and literary perspectives. Analysis of intersection of gender, race, class, and sexuality. Subject matter includes work, health, sexuality, and violence.</p>
 <p><strong>FOR/NREM 452 (Combined class with FOR/NREM 551): Ecosystem Management</strong><br />
 Department of Natural Resource Ecology and Management, Spring 2015<br />Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.</p>
