--- a/index.html
+++ b/index.html
@@ -202,10 +202,9 @@ $(document).ready(function () {
 
 
 <p><img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-width="200" height="200">I am a PhD candidate in the interdisciplinary Graduate Program in Sustainable Agriculture at Iowa State University working with <a href="https://soc.iastate.edu/ann-oberhauser/", target=_blank>Ann Oberhauser</a>. Additionally, I am housed in the Department of Sociology and am pursuing a minor in Women’s and Gender Studies. My research assistantships are with ISU Extension &amp; Outreach <a href="https://extension.iastate.edu/localfoods", target=_blank>Local Foods</a> and SNAP-Education programs.</p>
-<p>Prior to entering my PhD program, I completed an MS in Sustainable Agriculture at Iowa State University in 2014, and a BA in The Plan II Honors Program and BBA in Accounting at the University of Texas at Austin in 2008.</p>
-<p>I’m interested in food, social, and environmental justice, with a focus on feminist community-based, participatory research. My dissertation project focuses on a university-community food systems partnership, Growing Together Iowa.  While in graduate school, I’ve also been involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture. Currently I live with my spouse Andee in Durham, North Carolina, and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.</p>
-<p><a href="CV_CarrieChennault_November2018.pdf", target=_blank>CV</a> | <a href="mailto:carriemc@iastate.edu">carriemc@iastate.edu</a></p>
+<p>Prior to entering my PhD program, I completed an MS in the Department of Natural Resource Ecology and Management at ISU in 2014, majoring in Sustainable Agriculture. I earned a BA in The Plan II Honors Program and BBA in Accounting at the University of Texas at Austin in 2008.</p>
+<p>I’m interested in food, social, and environmental justice, with a focus on feminist political ecology and community-based, participatory research. My dissertation project focuses on a university-community food systems partnership, Growing Together Iowa.  While in graduate school, I’ve also been involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture. Currently I live with my spouse Andee in Durham, North Carolina, and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.</p>
+<p><a href="CV_CarrieChennault_Jan2019.pdf", target=_blank>CV</a> | <a href="mailto:carriemc@iastate.edu">carriemc@iastate.edu</a></p>
 
 
 
