--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ $(document).ready(function () {
 
 
 <p><img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-<p>Prior to entering my PhD program, I completed an MS in the Department of Natural Resource Ecology and Management at ISU in 2014, majoring in Sustainable Agriculture. I earned a BA in The Plan II Honors Program and BBA in Accounting at the University of Texas at Austin in 2008.</p>
+width="200" height="200">I am a PhD candidate and Brown Graduate Fellow in the Department of Sociology at Iowa State University, majoring in the interdisciplinary Graduate Program in Sustainable Agriculture and working with <a href="https://soc.iastate.edu/ann-oberhauser/", target=_blank>Ann Oberhauser</a>. At ISU, I have held doctoral research assistantships with ISU Extension &amp; Outreach <a href="https://extension.iastate.edu/localfoods", target=_blank>Local Foods</a> and SNAP-Education programs.</p>
+<p>Prior to entering my PhD program, I completed an MS in 2014 in the ISU Department of Natural Resource Ecology and Management, majoring in Sustainable Agriculture. I earned a BA in The Plan II Honors Program and BBA in Accounting at the University of Texas at Austin in 2008.</p>
 <p>I’m interested in food, social, and environmental justice, with a focus on feminist political ecology and community-based, participatory research. My dissertation project focuses on a university-community food systems partnership, Growing Together Iowa.  While in graduate school, I’ve also been involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture. Currently I live with my spouse Andee in Durham, North Carolina, and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.</p>
 <p><a href="CV_CarrieChennault_Jan2019.pdf", target=_blank>CV</a> | <a href="mailto:carriemc@iastate.edu">carriemc@iastate.edu</a></p>
 
