Updated research page

--- a/research.html
+++ b/research.html
@@ -203,8 +203,7 @@ $(document).ready(function () {
 <p><strong>"There <em>will be</em> no nature without justice. Nature and justice, contested discursive objects embodied in the material world, will become extinct or survive together."</strong></p> 
 <p>– Donna Haraway (1992, 311), "The Promises of Monsters: A Regenerative Politics for Inappropriate/d Others."</p>
 <p>As a feminist political ecologist, I build my research around the following question: What are the politics of developing a 'just' food 
-and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in rural and 
-urban areas of the U.S. Corn Belt. My recent work examines the racial, class, and gender dynamics at the nexus of local food and farming, 
+and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in the United States. My doctoral work examined the racial, class, and gender dynamics at the nexus of local food and farming, 
 emergency food, and Extension/land-grant practices. As a scholar-activist, I collaborate directly with communities that are working to 
 transform agrifood practices. Through these engagements, I develop critical scholarship on issues such as power, voice, and 
 relationality. I additionally explore opportunities for university-community partnerships to engage in processes of ‘co-experimentation’ 
@@ -220,43 +219,35 @@ height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style
 height="46%" width="46%"></p>
 <strong>Focus areas</strong>
 <ul style="list-style-type:disc">
-  <li>Community and alternative agrifood systems</li>
-  <li>Grassroots agricultural and environmental movements</li>
-  <li>Land-grant universities and Cooperative Extension</li>
-  </ul>
-</div> 
-
-<div>
-<strong>Collaborations and Partnerships</strong>
-<ul style="list-style-type:disc">
-  <li>Growing Together Iowa</li>
-  <li>Iowa Sustainable Agriculture / Leopold Center for Sustainable Agriculture Friends</li>
-  <li>Food at First Community Garden</li>
+  <li>Community/urban and alternative agrifood systems</li>
+  <li>Feminist geography and political ecology</li>
+  <li>Food and environmental justice</li>
+  <li>Grassroots food, agricultural, and environmental movements</li>
+  <li>Public science, community engagement, and land-grant universities</li>
+  <li>Urban ecology</li>
   </ul>
 </div> 
 
 <div id="research-projects" class="section level4">
-<h3>Current Research Assistantships</h3> 
+<h3>Graduate Research Experience</h3> 
 </div> 
   
 <div id="graduate-research-assistant-isu-extension-outreach" class="section level4">
 <h5>ISU Extension &amp; Outreach</h5>
-<p><em>SNAP-Education Program &amp; Local Foods Program</em></p>
+<p><em>Local Foods Program<br>
+SNAP-Education Program</em></p>
 <p>My dissertation research is part of an interdisciplinary effort within ISU Extension &amp; Outreach (ISUEO) to coordinate statewide community donation gardens, entitled Growing Together Iowa. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interact with, work alongside, and learn from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I work to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.</p>
 </div>
 <div id="graduate-research-assistant-isu-extension-outreach-1" class="section level4">
 <p>The Local Foods program supports my dissertation research on community food systems in Iowa. I coordinate my research activities in the <em>Growing Together</em> project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.</p>
 </div>
-
-<div id="past-research" class="section level4">
-<h3>Past Research Asssitantships</h3> 
-</div>
-
 <p><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
 height="46%" width="46%"></p>
 <div id="graduate-research-assistant-natural-resource-ecology-management" class="section level4">
 <h5>Department of Natural Resource Ecology &amp; Management</h5>
-<p><em>Landscape Ecology and Sustainable Ecosystem Management Lab &amp; Integrated Sustainable bioEnergy Pathways Team</em></p>
+<p><em>Landscape Ecology &amp; Sustainable Ecosystem Management Lab<br>
+People, Land Use &amp; Society Lab<br>
+Integrated Sustainable bioEnergy Pathways Team</em></p>
 <p>My master’s research focused on agroecological modeling in the U.S. Corn Belt. PEWI, or People in Ecosystems/Watershed Integration, is a simple web-based learning tool to help people understand human-landscape interactions and tradeoffs. PEWI helps people explore ways to balance agricultural production in the U.S. Corn Belt with other environmental benefits, including clean water, abundant wildlife, and recreation, among others. In my role on this project, I was the lead developer of the science model for PEWI 2.0, and also developed educational materials, created a library of PEWI-based lesson plans, conducted workshops and course units on PEWI, oversaw web development, and served as project manager.  In this role, I also worked with the ISEP, Integrated Sustainable bioEnergy Pathways, team to incorporate agroecological modeling into its agent-based modeling of bioenergy supply chains.</p>
 </div>
 
