--- a/teaching.html
+++ b/teaching.html
@@ -207,6 +207,10 @@ $(document).ready(function () {
 Women's and Gender Studies Program, Spring 2019 (2 sections)<br />Contemporary status of women in the U.S. and worldwide from social, economic, historical, political, philosophical and literary perspectives. Analysis of intersection of gender, race, class, and sexuality. Subject matter includes work, health, sexuality, and violence.</p>
 <p><strong>FOR/NREM 452 (Combined class with FOR/NREM 551): Ecosystem Management</strong><br />
 Department of Natural Resource Ecology and Management, Spring 2015<br />Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.</p>
+<div id="guest-lecturer-at-colorado-state-university" class="section level4">
+<h4>Guest lecturer at Colorado State University</h4>
+<p><strong>ESS 312: Sustainability Science</strong><br />
+Department of Ecosystem Science & Sustainability, Spring 2020</p>
 </div>
 <div id="guest-lecturer-at-iowa-state-university" class="section level4">
 <h4>Guest lecturer at Iowa State University</h4>
