--- a/research.html
+++ b/research.html
@@ -202,49 +202,64 @@ $(document).ready(function () {
 
 <p><strong>"There <em>will be</em> no nature without justice. Nature and justice, contested discursive objects embodied in the material world, will become extinct or survive together."</strong></p> 
 <p>– Donna Haraway (1992, 311), "The Promises of Monsters: A Regenerative Politics for Inappropriate/d Others."</p>
-<p>As a feminist political ecologist, I build my research around the following question: What are the politics of developing a 'just' food 
-and agricultural system? To answer this question, I explore the political ecologies of changing agrifood practices and activism in the United States. My doctoral work examined the racial, class, and gender dynamics at the nexus of local food and farming, 
-emergency food, and Extension/land-grant practices. As a scholar-activist, I collaborate directly with communities that are working to 
-transform agrifood practices. Through these engagements, I develop critical scholarship on issues such as power, voice, and 
+<p><strong>"Instead of pointing to those 'without' and citing injustice, we might imagine how we are intimately tied to broader conceptions of human and planetary life and which demonstrate our common and difficult histories of encounter."</strong></p> 
+<p>– Katherine McKittrick (2011, 960), "On Plantations, Prisons, and a Black Sense of Place."</p>
+
+<p>What are the politics of developing just and anti-racist food, agricultural, and environmental systems? To answer this question, my recent research explores how uneven geographies and political ecologies shape and are shaped by racialized discourses of food, agriculture, and the environment in the United States. As a scholar-activist, I have collaborated directly with communities and grassroots groups that are working to advance social and environmental justice, engender a critical understanding of food and food access, and struggle against a racially organized state. Through these engagements, I (co-)develop critical scholarship on issues such as power, voice, and 
 relationality. I additionally explore opportunities for university-community partnerships to engage in processes of ‘co-experimentation’ 
 (following Gibson-Graham and Carolan). Co-experimentation in my research includes alternatives modes of growing, 
 sharing, and eating food.
 It also includes critical, reflective conversations and co-authorships with academic and community partners that may open up paths to more ‘just’ naturalcultural 
-relations. In these collaborations, I have explored how everyday experience, radical vulnerability, emotion/affect, the body, and more-than-human 
-relationalities constitute co-experimental modes of social transformation.</p>
+relations. In these collaborations, I have explored how everyday experience, radical vulnerability, emotion/affect, the body, and relational life constitute co-experimental modes of social transformation.</p>
 
 <div>
-<p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
-height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
-height="46%" width="46%"></p>
+
 <strong>Focus areas</strong>
 <ul style="list-style-type:disc">
-  <li>Community/urban and alternative agrifood systems</li>
-  <li>Feminist geography and political ecology</li>
-  <li>Food and environmental justice</li>
-  <li>Grassroots food, agricultural, and environmental movements</li>
-  <li>Public science, community engagement, and land-grant universities</li>
-  <li>Urban ecology</li>
+  <li>Feminist and Black geographies</li>
+  <li>Political ecology</li>
+  <li>Food and agriculture</li>
+  <li>Urban sustainability</li>
+  <li>Anti-racism</li>
+  <li>Environmental justice and equity</li>
+  <li>Public science, community engagement and scholar-activism</li>
   </ul>
 </div> 
 
 <div id="research-projects" class="section level4">
-<h3>Graduate Research Experience</h3> 
+<h3>Postdoctoral Research Experience</h3> 
 </div> 
   
+<div id="postdoctoral-research-experience" class="section level4">
+<h5>Colorado State University</h5>
+<p><em>Prison Agriculture Lab</em></p>
+<p>As a postdoctoral researcher, I am a member of the Prison Agricultural Lab, led by Dr. Joshua Sbicca in the Department of Sociology. Our lab is conducting a first-of-its-kind nationwide study on food and agricultural activities within US prisons. Our initial effort has been two-fold: 1. compiling and analyzing a nationwide dataset of food and agricultural activities at prisons, and 2. contextualizing the development and expansion of agricultural activities since Reconstruction through the lens of racial capitalism. In framing this research as abolition praxis, not only are we interested in understanding how present-day practices of prison agriculture are implicated in the racial capitalist project of prison expansion, we are also looking for ways in which prison agriculture counteracts and contests carcerality–and might work toward the elimination of prisons.  
+Beyond our core research activities, the Prison Agriculture lab has collaborated with the <a href="https://gis.colostate.edu/", target=_blank>CSU Geospatial Centroid </a> to map prison agriculture, census, and related socio-spatial data, and with projects like <a href="https://covid19behindbars.com/", target=_blank>COVID-19 Behind Bars</a> that are working to address the impact of the coronavirus pandemic on incarcerated people.
+<p><em>Urban Ecology Lab</em></p>
+<p>The Urban Ecology Lab, led by Dr. Melissa McHale in the Department of Ecosystem Science and Sustainability, focuses on the development of urban sustainability and environmental justice with research in areas including urban forests and urban tree cover, biomass usage, home energy usage, and the role of municipal planning and programs. In my current research with the lab, I am examining the urban political ecologies of residential tree cover in Raleigh, North Carolina.</p>
+</p>
+</div>
+
+<div id="research-projects" class="section level4">
+<h3>Graduate Research Experience</h3> 
+
+</div> 
+<p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
+height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
+height="46%" width="46%"></p>
+
 <div id="graduate-research-assistant-isu-extension-outreach" class="section level4">
-<h5>ISU Extension &amp; Outreach</h5>
-<p><em>Local Foods Program<br>
-SNAP-Education Program</em></p>
-<p>My dissertation research is part of an interdisciplinary effort within ISU Extension &amp; Outreach (ISUEO) to coordinate statewide community donation gardens, entitled Growing Together Iowa. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interact with, work alongside, and learn from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I work to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.</p>
+<h5>Iowa State University Extension &amp; Outreach</h5>
+<p><em>Local Foods and SNAP-Education Programs</em></p>
+<p>My dissertation research was part of an interdisciplinary effort within ISU Extension &amp; Outreach (ISUEO) to coordinate statewide community donation gardens, entitled Growing Together Iowa. In this USDA Supplemental Nutrition Assistance Program Education-funded project, ISUEO collaborates with university research farms, county extension Master Gardeners, food pantries, and other grassroots partners. The project supports Master Gardeners in forging a donation gardening network to increase fresh produce in local food pantries. As a feminist scholar committed to praxis, I interacted with, worked alongside, and learned from the people working in the gardens and pantries, and the people accessing the food. Collaborating with Iowans across the state, I worked to foster community efforts for local, sustainable foods and to develop strong, caring, and socially just communities.</p>
 </div>
 <div id="graduate-research-assistant-isu-extension-outreach-1" class="section level4">
-<p>The Local Foods program supports my dissertation research on community food systems in Iowa. I coordinate my research activities in the <em>Growing Together</em> project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.</p>
+<p>The Local Foods program supported my dissertation research on community food systems in Iowa. I coordinated my research activities in the <em>Growing Together</em> project with the Local Foods Team through participating in our community development program and serving on our equity and inclusion committee.</p>
 </div>
 <p><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
 height="46%" width="46%"></p>
 <div id="graduate-research-assistant-natural-resource-ecology-management" class="section level4">
-<h5>Department of Natural Resource Ecology &amp; Management</h5>
+<h5>ISU Department of Natural Resource Ecology &amp; Management</h5>
 <p><em>Landscape Ecology &amp; Sustainable Ecosystem Management Lab<br>
 People, Land Use &amp; Society Lab<br>
 Integrated Sustainable bioEnergy Pathways Team</em></p>
