--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ $(document).ready(function () {
 
 
 <p><img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-width="200" height="200">I am an activist-scholar committed to food and environmental justice, anti-racism, and co-producing academic knowledge for and with marginalized communities.  My research engages feminist and Black geographies and political ecology to critically examine how racism structures US food, agricultural, and environmental systems, and to visibilize communal efforts of political resistance and transformation.
+width="200" height="200">I am an activist-scholar committed to food and environmental justice, anti-racism, and co-producing academic knowledge for and with marginalized communities.  My research engages feminist and Black geographies and political ecology to understand how racism structures US food, agricultural, and environmental systems, and visibilize communal efforts of political resistance and transformation.
 </p>
 <p>In Fall 2019, I started my current position as a Postdoctoral Fellow at Colorado State University, advised by <a href="https://warnercnr.colostate.edu/person/?user=SNCpwcbhBCUCqJgJ804jOA%3D%3D", target=_blank>Melissa McHale</a> in the Department of Ecosystem Science & Sustainability and <a href="https://www.libarts.colostate.edu/people/jsbicca/", target=_blank>Joshua Sbicca</a> in the Department of Sociology. My current research projects focus on urban political ecology and carceral food justice.  I am also a <a href=https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/, target=_blank>Sustainability Leadership Fellow</a> with the CSU School of Global Environmental Sustainability.
 </p>
