--- a/teaching.html
+++ b/teaching.html
@@ -209,6 +209,8 @@ Women's and Gender Studies Program, Spring 2019 (2 sections)<br />Contemporary s
 Department of Natural Resource Ecology and Management, Spring 2015<br />Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.</p>
 <div id="guest-lecturer-at-colorado-state-university" class="section level4">
 <h4>Guest lecturer at Colorado State University</h4>
+<p><strong>SOC 315: Applications of Qualitative Research</strong><br />
+Department of Sociology, Fall 2020</p>
 <p><strong>ESS 312: Sustainability Science</strong><br />
 Department of Ecosystem Science & Sustainability, Spring 2020</p>
 </div>
