Update contents on website, including CV

--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
 
 <title>Teaching and Engagement</title>
 
-<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/journal.min.css" rel="stylesheet" />
@@ -60,6 +60,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -80,6 +81,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -232,7 +236,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -267,54 +271,100 @@ $(document).ready(function () {
 </div>
 
 
-<div id="courses-taught-at-colorado-state-university" class="section level4">
+<div id="courses-taught-at-colorado-state-university"
+class="section level4">
 <h4>Courses taught at Colorado State University</h4>
-<p><strong>GR 100: Introduction to Geography</strong> Department of Anthropology &amp; Geography, Fall 2021 (2 sections). Major geographic themes applied to selected regions; physical environment, human-land relationships, and regional analysis.</p>
+<p><strong>GR 100: Introduction to Geography</strong> Department of
+Anthropology &amp; Geography, Fall 2021 (2 sections), Spring 2022, Fall
+2022. Major geographic themes applied to selected regions; physical
+environment, human-land relationships, and regional analysis.</p>
+<p><strong>GR 217: Human-Environment Geographies</strong> Department of
+Anthropology &amp; Geography, Spring 2022, Fall 2022. Examines
+human-environment relationships using geographic theories, geographic
+methods, and empirical evidence. Explores cross-scalar geographic
+interactions that shape environmental change and emphasizes critical
+thinking and small group interactions.</p>
 <p><strong>ECOL/GDPE 592: Sustainable Food Systems</strong><br />
-Graduate Degree Program in Ecology, Spring 2021. Interdisciplinary complexities of food systems, including material flows and sociopolitical contexts of food that are changing in response to global and local challenges. Analysis of strategies for improving the sustainability and resilience of food systems. Primary disciplinary foci include ecology, agronomy, and social sciences.</p>
+Graduate Degree Program in Ecology, Spring 2021. Interdisciplinary
+complexities of food systems, including material flows and
+sociopolitical contexts of food that are changing in response to global
+and local challenges. Analysis of strategies for improving the
+sustainability and resilience of food systems. Primary disciplinary foci
+include ecology, agronomy, and social sciences.</p>
 </div>
-<div id="courses-taught-at-iowa-state-university" class="section level4">
+<div id="courses-taught-at-iowa-state-university"
+class="section level4">
 <h4>Courses taught at Iowa State University</h4>
-<p><strong>WGS 201 Introduction to Women’s and Gender Studies</strong><br />
-Women’s and Gender Studies Program, Spring 2019 (2 sections). Contemporary status of women in the U.S. and worldwide from social, economic, historical, political, philosophical and literary perspectives. Analysis of intersection of gender, race, class, and sexuality. Subject matter includes work, health, sexuality, and violence.</p>
+<p><strong>WGS 201 Introduction to Women’s and Gender
+Studies</strong><br />
+Women’s and Gender Studies Program, Spring 2019 (2 sections).
+Contemporary status of women in the U.S. and worldwide from social,
+economic, historical, political, philosophical and literary
+perspectives. Analysis of intersection of gender, race, class, and
+sexuality. Subject matter includes work, health, sexuality, and
+violence.</p>
 <p><strong>FOR/NREM 452/552: Ecosystem Management</strong><br />
-Department of Natural Resource Ecology and Management, Spring 2015. Principles of planning, regulating, and decision-making associated with public and private lands, with consideration of forest, grassland, wetland, and freshwater aquatic ecosystems. Integrated natural resources management within ecological, social, economic and policy constraints.</p>
+Department of Natural Resource Ecology and Management, Spring 2015.
+Principles of planning, regulating, and decision-making associated with
+public and private lands, with consideration of forest, grassland,
+wetland, and freshwater aquatic ecosystems. Integrated natural resources
+management within ecological, social, economic and policy
+constraints.</p>
 </div>
-<div id="guest-lecturer-at-colorado-state-university" class="section level4">
+<div id="guest-lecturer-at-colorado-state-university"
+class="section level4">
 <h4>Guest lecturer at Colorado State University</h4>
+<p><strong>ANTH 571: Anthropology and Global Health</strong><br />
+CSU Department of Anthropology &amp; Geography, Fall 2022</p>
 <p><strong>SOC 315: Applications of Qualitative Research</strong><br />
 CSU Department of Sociology, Fall 2020</p>
 <p><strong>ESS 312: Sustainability Science</strong><br />
 CSU Department of Ecology Science &amp; Sustainability, Spring 2020</p>
 </div>
-<div id="guest-lecturer-at-iowa-state-university" class="section level4">
+<div id="guest-lecturer-at-iowa-state-university"
+class="section level4">
 <h4>Guest lecturer at Iowa State University</h4>
-<p><strong>WGS 402/502: Advanced Seminar in Feminist Research Methods</strong><br />
+<p><strong>WGS 402/502: Advanced Seminar in Feminist Research
+Methods</strong><br />
+Women’s and Gender Studies Program, Spring 2022</p>
+<p><strong>WGS 402/502: Advanced Seminar in Feminist Research
+Methods</strong><br />
 Women’s and Gender Studies Program, Spring 2021</p>
 <p><strong>SOC 513: Qualitative Research Methods</strong><br />
 Department of Sociology, Spring 2018</p>
-<p><strong>WGS 402/502: Advanced Seminar in Feminist Research Methods</strong><br />
+<p><strong>WGS 402/502: Advanced Seminar in Feminist Research
+Methods</strong><br />
 Women’s and Gender Studies Program, Spring 2017</p>
 <p><strong>CRP 383: Theory of the Planning Process</strong><br />
 Department of Community and Regional Planning, Fall 2016</p>
-<p><strong>HORT 376: Field Production of Horticultural Crops</strong><br />
+<p><strong>HORT 376: Field Production of Horticultural
+Crops</strong><br />
 Department of Horticulture, Fall 2016</p>
 <p><strong>FOR 451: Forest Resource Economics</strong><br />
 Department of Natural Resource Ecology and Management, Spring 2014</p>
-<p><strong>NREM 570: Advanced Decision-Making in Natural Resource Allocation</strong><br />
+<p><strong>NREM 570: Advanced Decision-Making in Natural Resource
+Allocation</strong><br />
 Department of Natural Resource Ecology and Management, Spring 2014</p>
 </div>
-<div id="educational-outreach-and-engagement" class="section level4">
-<h4>Educational outreach and engagement</h4>
+<div id="select-educational-outreach-and-engagement"
+class="section level4">
+<h4>Select educational outreach and engagement</h4>
+<p><strong>Prison agriculture in the United States: Mapping the
+disciplinary lanscapes of racial capitalism.</strong> CSU GIS Day,
+2021.</p>
 <p><strong>Dare to Share Your Garden</strong><br />
-ISU Extension &amp; Outreach Cass County Spring Garden Seminar, Spring 2017</p>
+ISU Extension &amp; Outreach Cass County Spring Garden Seminar, Spring
+2017</p>
 <p><strong>Donation Gardening Trainings</strong><br />
 ISU Extension Master Gardener Program, Summer 2016</p>
 <p><strong>Food Security in Iowa Immersion Session Leader</strong><br />
 World Food Prize Iowa Youth Institute, Spring 2016</p>
-<p><strong>People in Ecosystems/Watershed Integration Public Workshops</strong><br />
-Co-hosted by Prairie Rivers of Iowa at Des Moines Area Community College, Fall 2015</p>
-<p><strong>People in Ecosystems/Watershed Integration Class</strong><br />
+<p><strong>People in Ecosystems/Watershed Integration Public
+Workshops</strong><br />
+Co-hosted by Prairie Rivers of Iowa at Des Moines Area Community
+College, Fall 2015</p>
+<p><strong>People in Ecosystems/Watershed Integration
+Class</strong><br />
 Des Moines Brody Middle School 7th Grade Science, Spring 2015</p>
 </div>
 
