--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
 
 <title>About me</title>
 
-<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/journal.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -34,11 +43,6 @@
     </style>
 
 <style type="text/css">code{white-space: pre;}</style>
-<style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -51,32 +55,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 
 
@@ -87,10 +66,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -107,40 +82,16 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+details > summary > p:only-child {
+  display: inline;
+}
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 61px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 66px;
-  margin-top: -66px;
-}
-.section h2 {
-  padding-top: 66px;
-  margin-top: -66px;
-}
-.section h3 {
-  padding-top: 66px;
-  margin-top: -66px;
-}
-.section h4 {
-  padding-top: 66px;
-  margin-top: -66px;
-}
-.section h5 {
-  padding-top: 66px;
-  margin-top: -66px;
-}
-.section h6 {
-  padding-top: 66px;
-  margin-top: -66px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -168,7 +119,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -180,7 +131,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -191,10 +142,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -206,7 +170,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -273,7 +236,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -299,7 +262,7 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
@@ -309,12 +272,45 @@ $(document).ready(function () {
 
 
 <p><img src="carrie-0115-2.JPG" alt="some text" style="float:right" hspace="20"
-width="170">I am an interdisciplinary social scientist and activist-scholar. My research engages feminist and Black geographies and political ecology to understand how racism structures US food, agricultural, and environmental systems, and how communities are working toward possibilties for transformation.</p>
-<p>In Fall 2021, I started my current position as an Assistant Professor of Geography at Colorado State University. My current research projects focus on food and environmental justice and anti-racism in the United States, using mixed methods grounded in queer feminist and participatory methodologies. From 2019-2021, I held a postdoctoral fellowship at CSU and was a <a href="https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/">Sustainability Leadership Fellow</a> with the CSU School of Global Environmental Sustainability.</p>
-<p>Prior to CSU, I completed PhD studies and was a Brown Graduate Fellow at Iowa State University, majoring in the interdisciplinary Graduate Program in Sustainable Agriculture and minoring in Women’s and Gender Studies. I worked with feminist geographer <a href="https://soc.iastate.edu/ann-oberhauser/">Ann Oberhauser</a> and held doctoral research assistantships with ISU Extension &amp; Outreach <a href="https://www.extension.iastate.edu/ffed/">Local Foods</a> and SNAP-Education programs. My dissertation project, entitled “A feminist political ecology of food justice in Iowa,” critically examined a university-community food systems partnership called Growing Together Iowa. During my time in graduate school, I was involved with the Food at First garden and meal service, Wheatsfield Cooperative Grocery, the Journal of Critical Thought and Praxis, and the Friends of the Leopold Center for Sustainable Agriculture.</p>
-<p>Prior to entering my PhD program, I completed an MS in 2014 in the ISU Department of Natural Resource Ecology and Management, majoring in Sustainable Agriculture. During that time, I was a graduate research assisant and member of the Landscape Ecology &amp; Sustainable Ecosystem Management lab and the People, Land Use, and Society lab at ISU. In 2008, I earned a BA in The Plan II Honors Program and BBA in Accounting at the University of Texas at Austin.</p>
-<p>Currently I live with my spouse Andee in Fort Collins, Colorado and enjoy swimming, cycling, hiking, rock climbing, and being outdoors.</p>
-<p><a href="CV_CarrieChennault_Oct2021.pdf">CV</a> | <a href="mailto:Carrie.Chennault@colostate.edu">Carrie.Chennault@colostate.edu</a></p>
+width="170">I am an interdisciplinary social scientist and
+activist-scholar. My research engages feminist and Black geographies and
+political ecology to understand how racism structures US food,
+agricultural, and environmental systems, and how communities are working
+toward possibilties for transformation.</p>
+<p>In Fall 2021, I started my current position as an Assistant Professor
+of Geography at Colorado State University. My current research projects
+focus on food and environmental justice and anti-racism in the United
+States, using mixed methods grounded in queer feminist and participatory
+methodologies. From 2019-2021, I held a postdoctoral fellowship at CSU
+and was a <a
+href="https://sustainability.colostate.edu/education-and-training/sustainability-leadership-fellows/">Sustainability
+Leadership Fellow</a> with the CSU School of Global Environmental
+Sustainability.</p>
+<p>Prior to CSU, I completed PhD studies and was a Brown Graduate Fellow
+at Iowa State University, majoring in the interdisciplinary Graduate
+Program in Sustainable Agriculture and minoring in Women’s and Gender
+Studies. I worked with feminist geographer <a
+href="https://soc.iastate.edu/ann-oberhauser/">Ann Oberhauser</a> and
+held doctoral research assistantships with ISU Extension &amp; Outreach
+<a href="https://www.extension.iastate.edu/ffed/">Local Foods</a> and
+SNAP-Education programs. My dissertation project, entitled “A feminist
+political ecology of food justice in Iowa,” critically examined a
+university-community food systems partnership called Growing Together
+Iowa. During my time in graduate school, I was involved with the Food at
+First garden and meal service, Wheatsfield Cooperative Grocery, the
+Journal of Critical Thought and Praxis, and the Friends of the Leopold
+Center for Sustainable Agriculture.</p>
+<p>Prior to entering my PhD program, I completed an MS in 2014 in the
+ISU Department of Natural Resource Ecology and Management, majoring in
+Sustainable Agriculture. During that time, I was a graduate research
+assisant and member of the Landscape Ecology &amp; Sustainable Ecosystem
+Management lab and the People, Land Use, and Society lab at ISU. In
+2008, I earned a BA in The Plan II Honors Program and BBA in Accounting
+at the University of Texas at Austin.</p>
+<p>Currently I live with my spouse Andee in Fort Collins, Colorado and
+enjoy swimming, cycling, hiking, rock climbing, and being outdoors.</p>
+<p><a href="CV_CarrieChennault_Jan2022.pdf">CV</a> | <a
+href="mailto:Carrie.Chennault@colostate.edu">Carrie.Chennault@colostate.edu</a></p>
 
 
 
@@ -343,7 +339,7 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
