Updated cv, research

--- a/research.html
+++ b/research.html
@@ -299,7 +299,7 @@ modes of growing, sharing, and eating food. It also includes critical,
 reflective conversations and co-authorships with academic and community
 partners that may open up paths to more ‘just’ naturalcultural
 relations. In these collaborations, I have explored how everyday
-experience, radical vulnerability, emotion/affect, the body, and
+experience, radical vulnerability, emotion/affect, the body, collective resistance, and
 relational life constitute co-experimental modes of social
 transformation.</p>
 <p><strong>Focus areas</strong></p>
