--- a/research.html
+++ b/research.html
@@ -335,6 +335,8 @@ Beyond our core research activities, the Prison Agriculture lab has
 collaborated with the <a href="https://gis.colostate.edu/">CSU
 Geospatial Centroid</a> to map prison agriculture, census,
 environmental, and related socio-spatial data.</p>
+<p><em>Participatory Action Research Project in Dubuque, Iowa</em><br />
+I am engaged in a long-term collaboration with Dubuque community activist Lynn Sutton. Together, our scholar-activist/activist-scholar partnership seeks to advance racial, environmental, and food justice in Dubuque, Iowa. Starting with the understanding that racial injustices in food, housing, land, or otherwise cannot be solved in isolation, we have identified the political ecological issues, questions, and outcomes facing communities of color in Dubuque and are using PAR to support community organizing and activism efforts. Our academic work thus far has focused on community gardening and food justice, low-income rental housing and environmental justice, and more broadly Black women's well-being and placemaking in the city.</p>
 <p><img src="demogarden-009.JPG" alt="some text" style="float:right" hspace="20" vspace="10"
 height="46%" width="46%"><img src="rockrapids-harvest.jpg" alt="some text" style="float:right" hspace="20" vspace="10"
 height="46%" width="46%"><img src="IALEpresentation_pewiscreenshot.png" alt="some text" style="float:right" hspace="20" vspace="10"
